[tool.poetry]
name = "arsenic"
version = "1.0.0.dev8"
description = "Asynchronous webdriver client built on asyncio."
authors = ["Jonas Obrist <jonas.obrist@hde.co.jp>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.6"
attrs = ">=17.1.0"
structlog = "^18.1"
aiohttp = ">=2"

[tool.poetry.dev-dependencies]
pytest = "^3.5"
jinja2 = "^2.10"
pytest-asyncio = "^0.8.0"
sphinx = "^1.7"
pillow = "^5.1"
pytest-cov = "^2.5"
asyncio-extras = "^1.3"
pre-commit = "^1.10"
black = "^18.3-alpha.0"

[tool.poetry.scripts]
arsenic-check-ie11 = 'arsenic.helpers:check_ie11_environment_cli'
arsenic-configure-ie11 = 'arsenic.helpers:configure_ie11_environment_cli'
